Накинул фронт на проект и добавил валидацию на данные при обновлении и добавлении
