# internal/handlers/automobile/update.go
@@ -5,6 +5,7 @@ import (
 	"github.com/Olegsuus/TZ-WEB-App/internal/models"
 	"github.com/labstack/echo/v4"
 	"net/http"
+	"strconv"
 )
 
 // Update Обработчик для обновления данных автомобиля
@@ -13,19 +14,44 @@ import (
 // @Tags автомобиль
 // @Accept  json
 // @Produce  json
+// @Param id path int true "ID автомобиля"
+// @Param automobile body models.Automobile true "Обновленные данные автомобиля"
 // @Success 200  "OK"
+// @Failure 400  "Неверные данные запроса"
 // @Failure 500  "Ошибка на сервере"
 // @Router /car/:id [patch]
 func (h *AutomobileHandlers) Update(c echo.Context) error {
-	var automobile models.Automobile
+	strId := c.Param("id")
 
-	if err := c.Bind(&automobile); err != nil {
+	id, err := strconv.Atoi(strId)
+	if err != nil {
+		return handlers.ErrorsHandler(c, err, http.StatusBadRequest, "Неверный формат id")
+	}
+
+	var dto models.UpdateAutomobileDTO
+	if err := c.Bind(&dto); err != nil {
 		return handlers.ErrorsHandler(c, err, http.StatusBadRequest, "Неверные формат данных для обновления авто")
+	}
+
+	if err := c.Validate(&dto); err != nil {
+		return handlers.ErrorsHandler(c, err, http.StatusBadRequest, "Валидация данных не пройдена")
+	}
+
+	automobile := models.Automobile{
+		ID:               id,
+		ReleaseDate:      dto.ReleaseDate,
+		Model:            dto.Model,
+		LicensePlate:     dto.LicensePlate,
+		RegistrationDate: dto.RegistrationDate,
 	}
 
 	if err := h.Service.Update(&automobile); err != nil {
 		return handlers.ErrorsHandler(c, err, http.StatusInternalServerError, "Ошибка при обновлении данных авто")
 	}
 
-	return c.JSON(http.StatusOK, automobile)
+	response := models.UpdateRes{
+		Success: true,
+	}
+
+	return c.JSON(http.StatusOK, response)
 }
